# Deep-QLearning-Agent-for-Traffic-Signal-Control

./: .gitignore  LICENSE  README.md  TLCS-colab-training.ipynb  pyproject.toml  routes_evaluate.py  routes_train.py  static_evaluate.py  tlcs_agent_AVG_evaluate.py  tlcs_agent_STATIC_evaluate.py  tlcs_agent_train_newreward.py  tlcs_evaluate.py  tlcs_train.py
.github/: FUNDING.yml
TLCS/: Memory.py  Model.py  SimRunner.py  TrafficGenerator.py  generator.py  memory.py  model.py  testing_main.py  testing_settings.ini  testing_simulation.py  tlcs_main.py  training_main.py  training_settings.ini  training_simulation.py  utils.py  visualization.py
TLCS/intersection/: .gitignore  episode_routes.rou.xml
intersection/: environment.net.xml  sumo_config.sumocfg  tlcs_config_evaluate.sumocfg  tlcs_config_test.sumocfg  tlcs_config_train.sumocfg  tlcs_eval.rou.xml  tlcs_evaluate.rou.xml  tlcs_evaluate_2.rou.xml  tlcs_test.rou.xml  tlcs_train.rou.xml  tlcs_train_2.rou.xml
settings/: testing_settings.yaml  training_settings.yaml
src/tlcs/: agent.py  cli.py  constants.py  env.py  episode.py  generator.py  logger.py  main.py  memory.py  model.py  plots.py  settings.py  testing_simulation.py  training_simulation.py  utils.py
tlcs/: memory.py  model.py  model_training.py  plots.py  testing_main.py  testing_settings.yaml  testing_simulation.py  training_main.py  training_settings.yaml  training_simulation.py  utils.py  visualization.py
