[project]
name = "deep-qlearning-agent-for-traffic-signal-control"
version = "0.1.0"
description = "Deep Q-Learning agent controlling a single intersection in SUMO."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andrea Vidali", email = "andreavidali.me@gmail.com" }]
requires-python = ">=3.13,<3.14"

dependencies = [
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "ruff>=0.14.3",
    "torch>=2.9.0",
    "traci>=1.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.uv]
python-preference = "only-managed"

[tool.mypy]
python_version = "3.13"
disable_error_code = ["import-untyped"]
