[project]
name = "tlcs"
version = "0.1.0"
description = "Deep Q-Learning agent controlling a single intersection in SUMO."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andrea Vidali", email = "andreavidali.me@gmail.com" }]
requires-python = ">=3.13,<3.14"

dependencies = [
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pdbpp>=0.11.7",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "ruff>=0.14.3",
    "torch>=2.9.0",
    "traci>=1.24.0",
    "typer>=0.20.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
tlcs = "tlcs.cli:app"

[tool.ruff]
line-length = 100
target-version = "py313"
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "G004",   # logging-f-string
    "T201",   # print
    "DTZ005", # call-datetime-now-without-tzinfo
    "S311",   # suspicious-non-cryptographic-random-usage
    "FBT001", # boolean-type-hint-positional-argument
    "D104",   # undocumented-public-package
    "D100",   # undocumented-public-module

    # conflicting lint rules
    "ISC001", # single-line-implicit-string-concatenation
    "COM812", # missing-trailing-comma
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["finance"]

[tool.uv]
python-preference = "only-managed"

[tool.mypy]
python_version = "3.13"
disable_error_code = ["import-untyped"]
